--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column-reverse;
+    font-size: 15px;
 }
 
 .container {
@@ -28,16 +29,85 @@ body {
 
 .content1 {
     width: 50%;
+    height: 460px;
+    position: relative;
+}
+
+.info {
+    width: 74%;
+    height: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -175px;
+    margin-left: -37%;
 }
 
 .content2 {
     width: 50%;
-}
-
-.content2 img {
-    width: 100%;
-    height: 100%;
+    background-image: linear-gradient(hsla(277, 64%, 61%, 0.5), hsla(277, 64%, 61%, 0.5)),
+                      url(/images/image-header-desktop.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
-    ;
 }
+
+.info h1, .number, #discov{
+    color: hsl(0, 0%, 100%);
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+.info h1 {
+    font-weight: 700;
+    width: 100%;
+    font-size: 35px;
+}
+
+.info span {
+    color: hsl(277, 64%, 61%);
+}
+
+#discov {
+    color: hsla(0, 0%, 100%, 0.75);
+    font-size: 13px;
+    line-height: 1.6;
+    width: 85%;
+    margin-top: 40px;
+    word-spacing: 2px;
+}
+
+.number {
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.desc {
+    color: hsla(0, 0%, 100%, 0.6);
+    text-transform: uppercase;
+    font-size: 11px;
+    letter-spacing: 1px;
+    font-family: "Lexend Deca", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#plus {
+    text-transform: uppercase;
+}
+
+.indics {
+    display: flex;
+    gap: 13%;
+    margin-top: 90px;
+}
+
+.indic {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
